[project]
name = "llms-txt-writer"
version = "0.2.0"
description = "AI-facing writing skill with GEO/AEO static analysis and Answer.AI llms.txt standard compliance"
requires-python = ">=3.11"
dependencies = [
  "markdown-it-py>=3.0",
  "textstat>=0.7",
  "ginza>=5.2",
  "ja-ginza>=5.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "unit: fast pure-python unit tests",
  "integration: slower tests requiring NLP models",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
